--- a/Minh's Profile.html
+++ b/Minh's Profile.html
@@ -56,8 +56,8 @@
             </section>
             <hr class="m-0">
             <!--Education-->
-            <section class ="resume-section" id="Education">
-                <div class="resume-section-content">
+            <section class ="profile-section" id="Education">
+                <div class="profile-section-content">
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class = "flex-grow-1">
